aligned social media links and fixed letter size

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,7 +140,7 @@ body.sticky-header {
     background-color: #0b0e0b;
     /* border: rgb(255, 255, 255) solid 1px; */
     /* padding: 30px; */
-    width: 100%;
+    width: auto;
     text-align: center;
     font-size: 30px;
     font-weight: bold;
@@ -148,7 +148,7 @@ body.sticky-header {
 
 #head {
     /* font-size: 50px; */
-    font-size: 4vw;
+    font-size: 6vw;
     text-align: center;
     transition: 0.5s;
 }
@@ -170,8 +170,9 @@ body.sticky-header {
 .tab {
     display: inline-block;
     /* border-style: dashed; */
-    width: 24%;
-    /* font-size: 2.5vw; */
+    width: 17%;
+    font-size: 3vw;
+    transition: 0.5s;
 }
 
 .tab:hover {
@@ -319,42 +320,47 @@ body.sticky-header {
     color: #ffffff;
 }
 
+/* Social Media */
+
 .graphic-grid {
     content: "";
     display: table;
     clear: both;
     margin: 0 4% 0 4%;
-    padding: 1% 0;
-    width: 92%;
-    border: 2px solid black;
+    width: 90%;
+    /* border: 2px solid rgb(255, 255, 255); */
     align-content: center;
+}
+
+.graphic-row{
+    /* border: 1px solid rgb(255, 255, 255); */
+    width: 100%;
+    height: 16vw;
+    padding: 0 0 0 10%;
 }
 
 .graphic {
     position: relative;
     float: left;
     display: flex;
-    /* border: 1px solid black; */
-    left: 7px;
-    max-height: 600px;
-    width: 452px;
-    padding: 1px;
-    /* min-height: 400px; */
+    /* border: 1px dotted rgb(255, 255, 255); */
+    top: 2.5%;
+    height: 95%;
+    width: 25%;
     align-content: center;
     overflow: hidden;
+    margin: 1%;
 }
 
 /* Social Media */
 
 .fa { /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_social_media_buttons */
+    position: relative;
     border: 2px solid white;
     border-radius: 5%;
-    padding: 20px;
-    font-size: 5vw;
-    width: 8vw;
+    width: 100%;
     text-align: center;
     text-decoration: none;
-    /* top: 50%; */
     margin: 1%;
 }
 
@@ -365,31 +371,37 @@ body.sticky-header {
 .fa-facebook {
     background: #3B5998;
     color: white;
+    padding: 10%;
 }
 
 .fa-twitter {
     background: #55ACEE;
     color: white;
+    padding: 8%;
 }
 
 .fa-google {
     background: #dd4b39;
     color: white;
+    padding: 8%;
 }
 
 .fa-linkedin {
     background: #007bb5;
     color: white;
+    padding: 7%;
 }
 
 .fa-github {
     background: #171515;
     color: white;
+    padding: 5%;
 }
 
-.scratch-pfp {
-    background: #000000;
+.fa-scratch {
+    background: #25aff4;
     color: white;
+    padding: 5%;
 }
 
 /* .fa-youtube {
@@ -400,6 +412,7 @@ body.sticky-header {
 .fa-instagram {
     background: #125688;
     color: white;
+    padding: 8%;
 }
 
 .fa-instagram { /* https://stackoverflow.com/questions/37751375/instagram-new-logo-css-background */
@@ -408,6 +421,7 @@ body.sticky-header {
     background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    padding: 5%;
 }
 
 .fa-discord {
